<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bo_vien_2">

        <RelativeLayout
            android:id="@+id/bg_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_size"
                android:layout_centerVertical="true"
                android:id="@+id/iv_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/size"
                android:layout_toRightOf="@id/iv_size"
                android:textColor="#606060"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bt_default"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/default_size"
                android:textColor="#fff"
                android:textSize="16sp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bg_title"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/bg_pick">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <NumberPicker
                    android:id="@+id/np_hang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:overScrollMode="always"></NumberPicker>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:overScrollMode="always"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/np_cot"></NumberPicker>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/bg_pick"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/bg_name">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/row"
                android:textSize="18sp"
                android:textColor="#606060"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#606060"
                android:text="@string/column"
                android:textSize="18sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/bg_name"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cancel"
                android:background="@drawable/button"
                android:id="@+id/bt_cancel"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="OK"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_2"
                android:textColor="#fff"
                android:id="@+id/bt_ok"
                android:gravity="center"/>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>