<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_s">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_ads"
        android:layout_alignParentBottom="true"
        android:visibility="gone"></RelativeLayout>
    


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_ads"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#80000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S8 LAUNCHER"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/bt_size"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/settingss">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_size"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:text="@string/size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/bt_effect"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/settingss"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_effect"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="#fff"
                android:text="@string/page_transition_effect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/bt_rate"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"

            android:layout_marginRight="10dp"
            android:background="@drawable/settingss"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_rate"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="#fff"

                android:text="@string/rate"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>